--- a/templates/static_analysis/windows_binary_analysis.html
+++ b/templates/static_analysis/windows_binary_analysis.html
@@ -1,5 +1,5 @@
 
-  {% extends "base.html" %}
+  {% extends "base2.html" %}
    {% block content %}
       <!-- Left side column. contains the logo and sidebar -->
       <aside class="main-sidebar">
