--- a/templates/general/tasks.html
+++ b/templates/general/tasks.html
@@ -177,31 +177,37 @@
                                     <th> 测试人员</th>
                                     <th> 任务添加时间</th>
                                     <th> 测试引擎</th>
-                                    <th> 测试进度</th>
                                     <th> 测试结果</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>分析海尔app</td>
-                                    <td>罗吕根</td>
-                                    <td>2017-12-14</td>
-                                    <td>代码安全检测, 数据安全检测</td>
-                                    <td> 未完成</td>
-                                    <td> --</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2</th>
-                                    <td>静态分析摩拜app</td>
-                                    <td>罗吕根2</td>
-                                    <td>2017-12-14</td>
-                                    <td>代码安全检测, 数据安全检测</td>
-                                    <td> 已完成</td>
-                                    <td> <a href="report.html">查看</a></td>
-                                </tr>
                                 </tbody>
                             </table>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+             <div class="row">
+
+                <div class="col-md-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            未完成任务详细进度
+                        </div>
+
+                        <div class="panel-body">
+                            <div>
+                                <!-- Nav tabs -->
+                                <ul class="nav nav-tabs console-nav" role="tablist">
+                                </ul>
+
+                                <!-- Tab panes -->
+                                <div class="tab-content console-content">
+                                </div>
+
+                            </div>
 
                         </div>
                     </div>
@@ -257,7 +263,6 @@
 
     samples = []
 
-
     function refreshSamples() {
         $.ajax({
             type: 'GET',
@@ -281,16 +286,20 @@
 
 
     function getEnginesName(names) {
-        engines = ["静态分析","敏感数据硬编码","数据库敏感数据泄露","配置数据篡改检测","资源文件篡改检测","数据库文件篡改检测",
-        "通信数据明文泄露检测","加密证书锁定安全漏洞分析","会话重放攻击检测","会话超时攻击检测","会话劫持安全漏洞分析","短信DOS检测",
-        "用户注册与登陆安全","设备配网安全检测","手机和云认证及通信加密检测","手机和设备认证及通信加密检测",
-        "设备和云认证及通信加密检测","固件升级安全检测","固件存储安全检测"];
+        //engines = ["静态分析","敏感数据硬编码","数据库敏感数据泄露","配置数据篡改检测","资源文件篡改检测","数据库文件篡改检测",
+        //"通信数据明文泄露检测","加密证书锁定安全漏洞分析","会话重放攻击检测","会话超时攻击检测","会话劫持安全漏洞分析","短信DOS检测",
+        //"用户注册与登陆安全","设备配网安全检测","手机和云认证及通信加密检测","手机和设备认证及通信加密检测",
+        //"设备和云认证及通信加密检测","固件升级安全检测","固件存储安全检测"];
+        engines = ["静态分析", "人工分析"];
         es = names.split(",");
         result = ""
-        for(var i = 0; i < es.length; i++) {
-            result += "," + engines[es[i]];
+        if(es[0] == 0) {
+            result += "静态分析";
         }
-        return result.slice(1);
+        if(es.length > 1) {
+            result += ",人工分析";
+        }
+        return result;
     }
 
     function showProgress(i) {
@@ -307,11 +316,36 @@
     function refreshTasks() {
         Network.connect("../get_tasks/", {"X-CSRFToken": '{{ csrf_token }}'}, function(data) {
                $(".tasks").find("tbody").find("tr").remove();
+               var c = 0;
                for(var count = 0; count < data.tasks.length; count++) {
                     no = count + 1;
-                    i = data.tasks[count]
+                    i = data.tasks[count];
                     $(".tasks").find("tbody").append('<tr><th scope="row">' + no + '</th><td>' + i.name + '</td><td>' + i.member + '</td><td>' +
-                     i.TS + '</td><td>' + getEnginesName(i.engines) + '</td><td>' + showProgress(i) + '</td><td>' + i.addr + '</td></tr>');
+                     i.TS + '</td><td>' + getEnginesName(i.engines) + '</td><td>' + i.addr + '</td></tr>');
+                     if(i.progress === i.engines.split(",").length) {
+                        c++;
+                     }
+
+                     if(i.consoles.length > 0) {
+                        tab = $("#console-" + i.id);
+                        if(tab.length !== 0) {
+                            tab.html("");
+                            tab.append(i.consoles);
+                        } else {
+                            $(".console-nav").append('<li role="presentation" class="console-li-'+ i.id+'"><a href="#console-'+ i.id +'"  role="tab" data-toggle="tab">' + i.name + '</a></li>');
+                            $(".console-content").append('<div role="tabpanel" class="tab-pane" id="console-'+ i.id+'" style="height: 200px;overflow-y: scroll"><br>' + i.consoles + '</div>')
+                        }
+                     } else {
+                        tab = $("#console-" + i.id);
+                        if(tab.length !== 0) {
+                            tab.remove();
+                            $(".console-li-" + i.id).remove();
+                        }
+                     }
+               }
+               if(c === data.tasks.length && window.timer != null) {
+                    window.clearInterval(window.timer);
+                    window.timer = null;
                }
         });
     }
@@ -383,14 +417,16 @@
                     $("#modal1").modal('toggle');
                 }, 1000);
                 console.log(data);
-                refreshTasks();
+                if(window.timer == null) {
+                    window.timer = window.setInterval(refreshTasks ,5000);
+                }
             }
         });
     });
 
     refreshSamples();
     refreshTasks();
-    setInterval(refreshTasks() ,2000)
+    window.timer = window.setInterval(refreshTasks ,5000);
 
     </script>
   {% endblock %}
